[package]
name = "algorithm"
version = "0.1.0"
authors = ["b401 <sec@i-401.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version ="1.0.101", features = ["derive"]}
enum_derive = "0.1.7"
custom_derive = "0.1.7"
scanner = { path = "../scanner" }
lettre = "0.9.2"
lettre_email = "0.9.2"
splunk = { path = "../splunk" }
nmap-analyze = "1.0.0"
chrono = "0.4.9"
config = { path = "../config" }
snmp = { path = "../snmp" }
