[package]
name = "scanner"
version = "0.1.0"
authors = ["b401 <sec@i-401.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nmap-analyze = "1.0.0"
serde_json = "1.0.41"
serde = "1.0.101"
error-chain = "0.12.1"
tempfile = "3.1.0"
serde-xml-rs = "0.3.1"
sedregex = "0.2.4"
config = { path="../config" }
