[package]
name = "nidhogg"
version = "0.1.0"
authors = ["b401 <sec@i-401.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arp_det = { path = "../arp_det" }
web = { path = "../web" }
scanner = { path = "../scanner" }
algorithm = { path = "../algorithm" }
config = {path = "../config"}
