[package]
name = "nidhogg"
version = "0.1.0"
authors = ["b401 <sec@i-401.xyz>"]
edition = "2018"

[[bin]]
name = "nidhogg"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Ives Schneider <ives.schneider@i-401.xyz>"
depends = "libpcap0.8,nmap, curl, libsqlite3-0"
extended-description = "Nidhogg debian installer"
assets = [
	["/home/buuky/Repos/nidhogg/target/release/nidhogg", "/usr/bin/", "700"],
	["/home/buuky/Repos/nidhogg/config.yml", "/etc/nidhogg/", "700"],
	["/home/buuky/Repos/nidhogg/mappings.xml", "/etc/nidhogg/", "700"],
	["/home/buuky/Repos/nidhogg/portspecs.yml", "/etc/nidhogg/", "700"],
	["/home/buuky/Repos/nidhogg/static/css/*", "/etc/nidhogg/static/css", "700"],
	["/home/buuky/Repos/nidhogg/static/images/*", "/etc/nidhogg/static/images", "700"],
	["/home/buuky/Repos/nidhogg/web/templates/*", "/etc/nidhogg/templates/", "700"],
	["/home/buuky/Repos/nidhogg/nidhogg.service", "/etc/systemd/system/", "700"],
]
copyright = "2019, Ives Schneider"
license-file = [ "../LICENSE", "2" ]


[dependencies]
arp_det = { path = "../arp_det" }
web = { path = "../web" }
scanner = { path = "../scanner" }
algorithm = { path = "../algorithm" }
config = {path = "../config"}
