[package]
name = "web"
version = "0.1.0"
authors = ["b401 <sec@i-401.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-files = "0.1.5"
tera = "0.11.20"
arp_det = { path = "../arp_det" }
db = { path = "../db" }
scanner = { path = "../scanner" }
